--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern-exercise-tracker",
   "version": "1.0.0",
   "description": "Learn MERN",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index",
     "dev": "nodemon index"
